--- a/OJ/templates/layout.html
+++ b/OJ/templates/layout.html
@@ -50,7 +50,7 @@
 
                 <ul class="nav navbar-nav">
                     <li><a href="{% url  'contests'  %}">CONTESTS</a></li>
-                    <li><a href="#">PROBLEMSET</a></li>
+                    <li><a href="{% url 'problemset' %}">PROBLEMSET</a></li>
                     <li><a href="{% url 'ratings' %}">RATING</a></li>
                     <li><a href="{% url 'submissions' %}"> STATUS </a></li>
                 </ul>
