--- a/OJ/templates/problemset/mysubmissions.html
+++ b/OJ/templates/problemset/mysubmissions.html
@@ -1,4 +1,4 @@
-{% extends 'contest/layout.html' %}
+{% extends 'problemset/layout.html' %}
 {% block title %}
 My Submissions - {{ TITLE }} - OJ
 {% endblock %}
