--- a/OJ/templates/submission/all.html
+++ b/OJ/templates/submission/all.html
@@ -3,5 +3,5 @@
 All Submissions - OJ
 {% endblock %}
 {% block content %}
-{% include 'submission/submission_table.html' with SUBMISSIONS=SUBMISSIONS only%}
+{% include 'submission/table.html' with SUBMISSIONS=SUBMISSIONS only%}
 {% endblock %}
