--- a/OJ/templates/submission/table.html
+++ b/OJ/templates/submission/table.html
@@ -13,7 +13,7 @@
     </thead>
     <tbody>
         {% for s in SUBMISSIONS %}
-        {% include 'submission/submission_preview.html' with SUBMISSION_ID=s.SUBMISSION_ID SUBMISSION_TIME=s.SUBMISSION_TIME CONTEST_ID=s.CONTEST_ID LANGUAGE=s.LANGUAGE VERDICT=s.VERDICT EXECUTION_TIME=s.EXECUTION_TIME MEMORY_USAGES=s.MEMORY_USAGES  HANDLE=s.HANDLE PROBLEM_NAME=s.PROBLEM_NAME ALIAS=s.ALIAS  only %}
+        {% include 'submission/preview.html' with SUBMISSION_ID=s.SUBMISSION_ID SUBMISSION_TIME=s.SUBMISSION_TIME CONTEST_ID=s.CONTEST_ID LANGUAGE=s.LANGUAGE VERDICT=s.VERDICT EXECUTION_TIME=s.EXECUTION_TIME MEMORY_USAGES=s.MEMORY_USAGES  HANDLE=s.HANDLE PROBLEM_NAME=s.PROBLEM_NAME ALIAS=s.ALIAS PROBLEM_ID=s.PROBLEM_ID only %}
         {%  endfor %}
     </tbody>
 </table>
