--- a/OJ/templates/problemset/status.html
+++ b/OJ/templates/problemset/status.html
@@ -1,6 +1,6 @@
-{% extends 'contest/layout.html' %}
+{% extends 'problemset/layout.html' %}
 {% block title %}
-My Submissions - {{ TITLE }} - OJ
+Status  - {{ TITLE }} - OJ
 {% endblock %}
 {% block content %}
 {{ block.super }}
