Added Contest management on admin site

--- a/OJ/templates/admin/contests.html
+++ b/OJ/templates/admin/contests.html
@@ -20,7 +20,7 @@ Contests
         {% for contest in CONTESTS %}
         <tr>
             <td> {{contest.TITLE}} <br>
-                <a href="{% url 'contest' contest.CONTEST_ID %}">Enter>></a>
+                <a href="{% url 'admin_contest' contest.CONTEST_ID %}">Enter>></a>
             </td>
             <td>
                 {% for writer in contest.WRITERS %}
