--- a/OJ/templates/problem/view_generic.html
+++ b/OJ/templates/problem/view_generic.html
@@ -30,6 +30,7 @@
     </div>
     <div>
         <h5><b>Examples</b></h5>
+        {% include 'problem/view_sample_testcase.html' with SAMPLE_TESTCASES=SAMPLE_TESTCASES only %}
     </div>
     <div>
         <h5><b>Note</b></h5>
