--- a/OJ/templates/problem/edit.html
+++ b/OJ/templates/problem/edit.html
@@ -13,8 +13,8 @@ Edit - {{ PROBLEM_ID }} . {{PROBLEM_NAME}} - OJ
         time limit per test : <input type="number" name="TIMELIMIT" value="{{TIMELIMIT }}" required> miliseconds <br>
         memory limit per test : <input type="number" name="MEMORYLIMIT" value="{{ MEMORYLIMIT }}" required> kilobytes
         <br>
-        tutorial link : <input type="url" name="TUTORIAL_LINK" value="{{ TUTORIAL_LINK }}"> <br>
-        difficulty : <input type="number" name="DIFFICULTY" value="{{DIFFICULTY }}"> <br>
+        tutorial link : <input type="url" name="TUTORIAL_LINK" value="{{ TUTORIAL_LINK|default:'' }}"> <br>
+        difficulty : <input type="number" name="DIFFICULTY" value="{{DIFFICULTY|default:'' }}"> <br>
     </div>
 
     <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
@@ -34,6 +34,7 @@ Edit - {{ PROBLEM_ID }} . {{PROBLEM_NAME}} - OJ
         </div>
         <div>
             <h5><b>Examples</b></h5>
+            {% include 'problem/view_sample_testcase.html' with SAMPLE_TESTCASES=SAMPLE_TESTCASES only %}
             <button> <a href="{% url 'problem_add_sample' PROBLEM_ID %}">Add More Sample </a> </button>
         </div>
         <div>
