--- a/OJ/templates/problem/add_sample.html
+++ b/OJ/templates/problem/add_sample.html
@@ -4,6 +4,8 @@ Add sample to problem
 {% endblock %}
 {% block content %}
 
+<a href="{% url 'problem_edit' request.resolver_match.kwargs.problem_id %}"> <button class="btn btn-secondary" > Back </button> </a>
+
 <form method="POST">
     {% csrf_token %}
     <table class="table table-bordered">
@@ -24,7 +26,7 @@ Add sample to problem
                 </td>
                 <td>
                     <input type="number" name="SAMPLE_TESTCASE_ID" required> <br>
-                    <button type="submit">Add</button>
+                    <button type="submit"  class="btn btn-primary" >Add</button>
                 </td>
             </tr>
         </tbody>
@@ -45,18 +47,20 @@ Add sample to problem
         <tr>
             <td>
                 <div style="font-family:'Lucida Console', Monaco, monospace;">
-                    {{sample_testcase.INPUT|safe}}
+                    <pre>{{sample_testcase.INPUT|safe}}</pre>
                 </div>
             </td>
 
             <td>
-                <div style="font-family:'Lucida Console', Monaco, monospace;">
-                    {{sample_testcase.OUTPUT|safe}}
+               <div style="font-family:'Lucida Console', Monaco, monospace;">
+                <pre>{{sample_testcase.OUTPUT|safe}}</pre>
                 </div>
+            
+            
             </td>
 
             <td>
-                <a href="#"
+                <a href="{% url 'problem_remove_sample' request.resolver_match.kwargs.problem_id sample_testcase.SAMPLE_TESTCASE_ID %}"
                     onclick="return confirm('Are you sure you want to remove sample test case {{sample_testcase.SAMPLE_TESTCASE_ID}} ?');">
                     <button type="button" class="btn btn-danger">Delete</button></a>
             </td>
