--- a/OJ/templates/submission/preview.html
+++ b/OJ/templates/submission/preview.html
@@ -16,7 +16,9 @@
         {% endif %}
     </td>
     <td> {{ LANGUAGE }} </td>
-    <td> {{ VERDICT }} </td>
-    <td> {{ EXECUTION_TIME }} </td>
-    <td> {{ MEMORY_USAGES }} </td>
+    <td>
+        <span style="color:{{VERDICT_COLOR}};"> {{ VERDICT }} </span>
+    </td>
+    <td> {{ EXECUTION_TIME|default:'0' }} </td>
+    <td> {{ MEMORY_USAGES|default:'0' }} </td>
 </tr>
