--- a/OJ/templates/admin/contest.html
+++ b/OJ/templates/admin/contest.html
@@ -12,7 +12,13 @@ Edit {{CONTEST_ID}} . {{ TITLE }} - OJ
     <label> Start Time :</label> <input type="datetime-local" name="START_TIME"
         value="{{ START_TIME|date:"Y-m-d\TH:i" }}"> <br>
     <label> Duration : </label> <input type="number" name="DURATION" value="{{ DURATION }}"> minutes <br>
+    {% for manager in managers %}
+    <label> Manager: </label>
+    <b> {{ manager.handle }} </b>
+    <button type="submit"> Remove </button><br>
+    {% endfor %}
     <label> Manager :</label> <input type="text" name="MANAGER_HANDLE" value="{{ MANAGER_HANDLE }}" required> <br>
+    <button type="submit"> Add </button><br>
     <button type="submit"> Save </button><br>
 </form>
 <a href="{% url 'admin_remove_contest' CONTEST_ID %}"
