Added contest name and id in dashboard

--- a/OJ/templates/contest/layout.html
+++ b/OJ/templates/contest/layout.html
@@ -1,5 +1,8 @@
 {% extends 'layout.html' %}
 {% block content %}
+<div class="header" style="text-align: center;">
+    <b>{{CONTEST_ID}}.{{TITLE}}</b>
+</div>
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
