--- a/OJ/templates/contest/dashboard.html
+++ b/OJ/templates/contest/dashboard.html
@@ -43,4 +43,72 @@ Dashboard - {{ TITLE }} -OJ
         {% endfor %}
     </tbody>
 </table>
+
+<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#question" aria-expanded="false"
+    aria-controls="collapseExample">
+    Click to ask Question
+</button>
+
+<form method="POST" class="collapse" id="question" action="{% url 'contest_ask' CONTEST_ID %}">
+    {% csrf_token %}
+    <label> Ask Question </label>
+    <textarea name='QUESTION'>In Problem A ...</textarea>
+    <button type="submit">Ask</button>
+</form>
+
+
+
+<h3> Clarifications </h3>
+<table class="table table">
+    <thead>
+        <tr>
+            <th> Publish Time </th>
+            <th>Question</th>
+            <th>Answer</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for clarification in CLARIFICATIONS %}
+        <tr>
+
+            <td>
+                {{clarification.PUBLISH_TIME}}
+            </td>
+
+            <td>
+                <p>
+                    {{ clarification.QUESTION|safe }}
+                </p>
+            </td>
+            <td>
+
+                {% if IS_MANAGER %}
+                {% if clarification.ANSWER is not None %}
+                <p>
+                    {{ clarification.ANSWER|safe }}
+                </p>
+                {% else %}
+                <form method='POST'
+                    action="{% url 'contest_update_question' CONTEST_ID clarification.CLARIFICATION_ID %}">
+                    {% csrf_token %}
+                    <textarea name="ANSWER"></textarea>
+                    <button type="submit">Update</button>
+                </form>
+                {% endif %}
+
+                <a href="{% url 'contest_remove_question' CONTEST_ID clarification.CLARIFICATION_ID %}"
+                    onclick="return confirm('Are you sure you want to delete this question?');"> <button type="button"
+                        class="btn btn-danger">Delete</button></a>
+
+                {% else %}
+                <p>
+                    {{ clarification.ANSWER|safe }}
+                </p>
+                {% endif %}
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
 {% endblock %}
