--- a/OJ/templates/contest/layout.html
+++ b/OJ/templates/contest/layout.html
@@ -19,7 +19,7 @@
                 <li><a href="{% url 'submit' CONTEST_ID %}">SUBMIT CODE</a></li>
                 <li><a href="{% url 'mysubmissions' CONTEST_ID %}">MY SUBMISSIONS</a></li>
                 <li><a href="{% url 'status' CONTEST_ID %}">STATUS</a></li>
-                <li><a href="#">STANDINGS</a></li>
+                <li><a href="{% url 'contest_standings' CONTEST_ID %}" > STANDINGS </a> </li>
             </ul>
         </div>
     </div>
