--- a/OJ/templates/contest/dashboard.html
+++ b/OJ/templates/contest/dashboard.html
@@ -38,11 +38,39 @@ Dashboard - {{ TITLE }} -OJ
             </td>
             <td>
                 <a href="{% url 'submit_problem' CONTEST_ID problem.ALIAS %}"> <button> Submit </button> </a>
+                {% if IS_MANAGER %}
+                <a href="{% url 'contest_remove_problem' CONTEST_ID problem.PROBLEM_ID %}"
+                    onclick="return confirm('Are you sure you want to delete this problem?');"> <button type="button"
+                        class="btn btn-danger">Delete</button></a>
+                {% endif %}
             </td>
         </tr>
         {% endfor %}
     </tbody>
 </table>
+
+{% if IS_MANAGER %}
+
+<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#add_problem" aria-expanded="false"
+    aria-controls="collapseExample">
+    Click to Add Problem
+</button>
+
+
+<form method="POST" class="collapse" id="add_problem" action="{% url 'contest_add_problem' CONTEST_ID %}">
+    {% csrf_token %}
+    <label for="ALIAS"> Alias: </label>
+    <input type="text" name="ALIAS" required>
+    <select name="PROBLEM_ID" required>
+        <option value="">Select Problem</option>
+        {% for id,name in OWNER_PROBLEMS %}
+        <option value="{{id}}">{{id}} - {{name}}</option>
+        {% endfor %}
+    </select>
+    <button type="submit">Add</button>
+</form>
+
+{% endif %}
 
 <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#question" aria-expanded="false"
     aria-controls="collapseExample">
