Added Contest State:=RUNNING,ENDED,UPCOMING

--- a/OJ/templates/admin/contests.html
+++ b/OJ/templates/admin/contests.html
@@ -21,6 +21,7 @@ Contests
         <tr>
             <td> {{contest.TITLE}} <br>
                 <a href="{% url 'admin_contest' contest.CONTEST_ID %}">Enter>></a>
+                {{ contest.STATE  }}
             </td>
             <td>
                 {% for writer in contest.WRITERS %}
