Completed standings functinality

--- a/OJ/templates/contest/contests.html
+++ b/OJ/templates/contest/contests.html
@@ -17,7 +17,9 @@ Contests
         {% for contest in CONTESTS %}
         <tr>
             <td> {{contest.TITLE}} <br>
+                {% if contest.STATE != 'UPCOMING' %}
                 <a href="{% url 'contest' contest.CONTEST_ID %}">Enter>></a>
+                {% endif %}
                 {{ contest.STATE  }}
             </td>
             <td>
